<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tvSelectTopic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/select_topic"
        android:textSize = "26sp"
        android:textColor="@color/colorPrimary"
        android:textStyle="normal"
        android:layout_marginStart="50dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toLeftOf="@id/spTopics"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toTopOf="@id/ivMeme" />

    <Spinner
        android:id="@+id/spTopics"
        android:textAlignment="center"
        android:gravity="center"
        android:padding="5dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toRightOf="@id/tvSelectTopic"
        app:layout_constraintBottom_toTopOf="@id/ivMeme" />

    <ImageView
        android:id="@+id/ivMeme"
        android:layout_width="0dp"
        android:layout_height="0dp"
        tools:srcCompat="@tools:sample/avatars"
        app:layout_constraintTop_toBottomOf="@id/spTopics"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toTopOf="@id/llButtons"
        android:contentDescription="@string/meme" />

    <ProgressBar
        android:id="@+id/pbMeme"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/ivMeme"
        app:layout_constraintRight_toRightOf="@id/ivMeme"
        app:layout_constraintLeft_toLeftOf="@id/ivMeme"
        app:layout_constraintBottom_toBottomOf="@id/ivMeme"/>

    <LinearLayout
        android:id="@+id/llButtons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="5dp"
        android:weightSum="2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivMeme">

        <Button
            android:id="@+id/btnSave"
            android:text="@string/save"
            android:layout_margin="10dp"
            android:textSize="26sp"
            android:textColor="@android:color/white"
            android:background="@color/colorPrimary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/btnShare"
            android:text="@string/share"
            android:layout_margin="10dp"
            android:textSize="26sp"
            android:textColor="@android:color/white"
            android:background="@color/colorPrimary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/btnNext"
            android:text="@string/next"
            android:layout_margin="10dp"
            android:textSize="26sp"
            android:textColor="@android:color/white"
            android:background="@color/colorPrimary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            tools:ignore="ButtonStyle"
            android:onClick="nextMeme"/>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>